--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -62,9 +62,9 @@ h3{
 }
 
 .grad-back{
-    background-color: rgba(220,208,192,0.6);
-    background-color: rgba(191,216,210,0.7);
-    background-color: rgba(124, 142, 166, 0.7);
+  background-color: rgba(220,208,192,0.6);
+  background-color: rgba(191,216,210,0.7);
+  background-color: rgba(124, 142, 166, 0.7);
 }
 
 .grad-back-full{
@@ -182,18 +182,16 @@ h3{
 ===============================================================*/
 
 #finalise-button {
-  background: #3498db;
-  background-image: linear-gradient(to bottom, #3498db, #2980b9);
-  border-radius: 2px;
-  color: #ffffff;
-  font-size: 60px;
+  background-color: rgba(124,142,166,0.6);
+  /*background-image: linear-gradient(to bottom, rgb(124,142,166), #1e242c);*/
+  font-size: 4em;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
   cursor: pointer;
 }
 
 #finalise-button:hover {
-  background: #3cb0fd;
-  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  background-color: rgba(193,107,82,0.5);
+  box-shadow: 1px 1px 8px rgba(0,1,30,0.6);
   text-decoration: none;
 }
